welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: too many arguments for method gauche: ()Unit
  gauche(2)
        ^DwarfCode:9: error: too many arguments for method gauche: ()Unit
    gauche(2)
          ^DwarfCode:15: error: too many arguments for method gauche: ()Unit
    gauche(2)
          ^